# kuzh

./: .gitignore  README.md
back/: .scalafmt.conf  build.sbt
back/project/: plugins.sbt
back/src/main/scala/: Assembly.scala  AssemblyAPI.scala  HelloWorld.scala  Jokes.scala  KuzhRoutes.scala  KuzhServer.scala  KuzhbackRoutes.scala  KuzhbackServer.scala  Main.scala  MemberChannel.scala
back/src/main/scala/lib/: Lib.scala
back/src/main/scala/lib/crypto/: Crypto.scala
back/src/main/scala/middleware/: AssemblyAuth.scala
back/src/main/scala/models/: Assembly.scala  AssemblyEvent.scala  Ballot.scala  Connection.scala  Handshake.scala  Harvest.scala  HarvestProtocol.scala  HarvestingEvent.scala  IdentityProof.scala  Member.scala  MemberEvent.scala  Models.scala  Parameters.scala  Phase.scala  Protocol.scala  State.scala  Status.scala
back/src/main/scala/models/assembly/: AssemblyEvent.scala  Event.scala  Info.scala  Phase.scala  State.scala  Status.scala
back/src/main/scala/services/: AssemblyManagement.scala  IdentityProofStore.scala
doc/: api.md
front/: .env.production  README.md  package.json  style.html
front/public/: index.html  manifest.json
front/public/locales/en/: translation.json
front/public/locales/fr/: translation.json
front/src/: App.tsx  Assembly.tsx  French.ts  Menu.tsx  i18n.ts  index.tsx  style.css
front/src/components/: App.test.tsx  App.tsx  AssemblyPage.tsx  AssemblySharing.tsx  ConnectionPage.tsx  CryptoMembershipPanel.tsx  HarvestingPanel.tsx  ID.tsx  MemberList.tsx  MembershipPanel.tsx  Menu.tsx  MenuPage.tsx  Nickname.tsx  PresencePanel.tsx  ProposedPanel.tsx  ReadinessPanel.tsx  SeatPage.tsx  StatusPanel.tsx  WaitingPanel.tsx
front/src/fonts/overpass/: _overpass.scss  example.html  overpass.css
front/src/fonts/overpass-mono/: _overpass-mono.scss  example.html
front/src/lib/: BackAPI.ts  Base64URL.ts  Compare.ts  Fuse.ts  Iso.ts  JSONNormalizedStringify.ts  Listener.ts  MVar.ts  Model.ts  Observable.ts  Pair.ts  Router.ts  StorageAPI.ts  Utils.ts  Var.ts  withAsync.ts
front/src/model/: AppState.ts  Assembly.ts  AssemblyEvent.ts  AssemblyState.ts  Ballot.ts  ChoiceStatus.ts  ConnectionController.ts  ConnectionEvent.ts  Crypto.ts  Events.ts  Handshake.ts  Harvest.ts  HarvestResult.ts  HarvestState.ts  Member.ts  MemberEvent.ts  Operation.ts  Parameters.ts  PublicEvent.ts  Question.ts  RefAppState.ts  SteatState.ts  UXConfig.ts  Validation.ts
front/src/model/assembly/: Assembly.ts  AssemblyState.ts  AssembyInfo.ts  ChoiceStatus.ts  Harvest.ts  Phase.ts  State.ts  Status.ts
front/src/model/events/: AssemblyEvent.ts  ConnectionEvent.ts  HarvestingEvent.ts  MemberEvent.ts  ProtocolEvent.ts  PublicEvent.ts
front/src/services/: AssemblyAPI.ts  BackAPI.ts  IdentityProofStore.ts  Install.ts  Services.ts  StorageAPI.ts
kuzh-rs/: Cargo.toml  Makefile  rust-toolchain.toml
kuzh-rs/kuzh-common/: Cargo.toml
kuzh-rs/kuzh-common/src/: answering.rs  chain.rs  common.rs  crypto.rs  db.rs  gate.rs  lib.rs  network.rs  newtypes.rs  room.rs
kuzh-rs/kuzh-common/src/answering/: events.rs  mod.rs  state.rs  states.rs
kuzh-rs/kuzh-common/src/crypto/: mod.rs  primitives.rs
kuzh-rs/kuzh-common/src/domain/: chain.rs  identity.rs  mod.rs  question.rs  room.rs  survey.rs
kuzh-rs/kuzh-common/src/room/: events.rs  has_role.rs  mod.rs  state.rs  states.rs
kuzh-rs/kuzh-server/: Cargo.toml
kuzh-rs/kuzh-server/src/: db.rs  handshake.rs  main.rs  room.rs
kuzh-rs/kuzh-server/src/migrations/: V1__rooms_blocks_states.sql
kuzh-rs/kuzh-server/tools/: start-docker-postgres.sh
kuzh-rs/kuzh-web/: Cargo.toml  index.html
kuzh-rs/kuzh-web/src/: indexeddb.rs  lib.rs  main.rs
