[package]
name = "kuzh-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
curve25519-dalek = {version = "4.0.0-rc.2", features = ["rand_core"] }
subtle = "2.5.0"
rand = "0.8.5"
thiserror = "1.0.40"
nonempty = "0.8.1"
