[package]
name = "kuzh-common"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "*"
curve25519-dalek = {version = "*", features = ["rand_core"] }
subtle = "*"
rand = "*"
thiserror = "*"
nonempty = "*"
futures = "*"
futures-util = "*"
futures-channel = "*"
never-type = "*"

[features]
client = []
