[package]
name = "kuzh-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
kuzh-common = { path = "../kuzh-common" }
tokio = {version = "*", features = ["full"] }
futures = "*"
futures-util = "*"
futures-channel = "*"
hex = "*"
base64 = {version = "*", features = ["std"]}
tokio-postgres = "*"
refinery = { version = "*", features = ["tokio-postgres"] }
clap = { version = "*", features = ["derive"] }
deadpool-postgres = "*"

[dev-dependencies]
assert2 = "*"
tokio = { version = "*", features = ["net", "macros", "rt-multi-thread"] }
